--- a/index.html
+++ b/index.html
@@ -1,1 +1,204 @@
-﻿<h1>hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <style>
+        h1{
+            text-align: center;
+            font-size: 50px;
+            font-family: '宋体';
+            margin-bottom: 20px;
+        }
+        p{
+            margin-left: 20%;
+            margin-right: 20%;
+        }
+        .a {
+            width: 1100px;
+            height: 100px;
+            border: 1px solid grey;
+            margin-right: auto;
+            margin-left: auto;
+            margin-top: 10px;
+        }
+
+        .box1 {
+            width: 177px;
+            height: 100px;
+            border: 1px solid grey;
+            float: left;
+            margin-right: 8px;
+        }
+
+        .box2 {
+            width: 177px;
+            height: 100px;
+            border: 1px solid grey;
+            float: left;
+            margin-right: 8px;
+        }
+
+        .box3 {
+            width: 177px;
+            height: 100px;
+            border: 1px solid grey;
+            float: left;
+            margin-right: 8px;
+        }
+
+        .box4 {
+            width: 177px;
+            height: 100px;
+            border: 1px solid grey;
+            float: left;
+            margin-right: 8px;
+        }
+
+        .box5 {
+            width: 178px;
+            height: 100px;
+            border: 1px solid grey;
+            float: left;
+            margin-right: 8px;
+        }
+
+        .box6 {
+            width: 59px;
+            height: 100px;
+            border: 1px solid grey;
+            float: right;
+        }
+
+        .hezi {
+            width: 1000px;
+            height: 98px;
+            border: 1px solid black;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 10px;
+            background-color: #c1bbff;
+        }
+
+        .a {
+            width: 1000px;
+            height: 100px;
+            border: 1px solid grey;
+            margin-right: auto;
+            margin-left: auto;
+            margin-top: 100px;
+        }
+
+        .hezi1 {
+            width: 240px;
+            height: 350px;
+            border: 1px solid grey;
+            /*background-color: #6efff0;*/
+            margin-left: 18%;
+            margin-top: 10px;
+            float: left;
+        }
+
+        .hezi2 {
+            width: 240px;
+            height: 350px;
+            border: 1px solid grey;
+            /*background-color: #6efff0;*/
+            margin-left: 150px;
+            margin-top: 10px;
+            float: left;
+        }
+        .hezi3 {
+            width: 240px;
+            height: 350px;
+            border: 1px solid grey;
+            /*background-color: #6efff0;*/
+            margin-right: 18%;
+            margin-top: 10px;
+            float: right;
+        }
+        .tuwen{
+            margin-left: 15%;
+            margin-right: 35%;
+            margin-top: 10px;
+        }
+        .tuwen1{
+            float: left;
+        }
+    </style>
+</head>
+<body>
+<h1>汪网</h1>
+<div class="a">
+    <div class="box1">
+        <p >
+            <a href="http://news.sina.com.cn/">新闻</a>
+            <a href="http://mil.news.sina.com.cn/">军事</a>
+            <a href="http://news.sina.com.cn/society/">社会</a>
+        </p>
+        <p >
+            <a href="http://news.sina.com.cn/">财经</a>
+            <a href="http://mil.news.sina.com.cn/" >股票</a>
+            <a href="http://news.sina.com.cn/society/" >基金</a>
+        </p>
+    </div>
+    <div class="box2">
+
+    </div>
+    <div class="box3">
+
+    </div>
+    <div class="box4">
+
+    </div>
+    <div class="box5">
+
+    </div>
+    <div class="box6">
+        <p>
+            <a href="http://news.sina.com.cn/">新闻</a>
+        </p>
+        <p>
+            <a href="http://news.sina.com.cn/">新闻</a>
+        </p>
+    </div>
+</div>
+<div class="hezi">
+    <span></span>
+    <span></span>
+</div>
+<div class="b">
+    <div class="hezi1">
+        <ul>
+            <li><a href="http://slide.zj.sina.com.cn/">浙高校校花清新写真</a></li>
+            <li><a href="http://slide.zj.sina.com.cn/news/slide_32_35533_475504.html">孙杨现身机场获迷妹包围</a></li>
+            <li><a href="http://slide.zj.sina.com.cn/news/slide_32_35533_474773.html#p=1">绝美千岛湖花海美图</a></li>
+            <li><a href="http://slide.zj.sina.com.cn/fashion/slide_32_32270_474897.html#p=1">上海社保断缴与接续政策解读</a></li>
+            <li><a href="http://slide.zj.sina.com.cn/">浙高校校花清新写真</a></li>
+            <li><a href="http://slide.zj.sina.com.cn/">浙高校校花清新写真</a></li>
+        </ul>
+    </div>
+    <div class="hezi2">
+        <ol>
+        <li><a href="http://slide.zj.sina.com.cn/">浙高校校花清新写真</a></li>
+        <li><a href="http://slide.zj.sina.com.cn/news/slide_32_35533_475504.html">孙杨现身机场获迷妹包围</a></li>
+        <li><a href="http://slide.zj.sina.com.cn/news/slide_32_35533_474773.html#p=1">绝美千岛湖花海美图</a></li>
+        <li><a href="http://slide.zj.sina.com.cn/fashion/slide_32_32270_474897.html#p=1">上海社保断缴与接续政策解读</a></li>
+        <li><a href="http://slide.zj.sina.com.cn/">浙高校校花清新写真</a></li>
+        <li><a href="http://slide.zj.sina.com.cn/">浙高校校花清新写真</a></li>
+        </ol>
+    </div>
+    <div class="hezi3">
+        <span class="tuwen"><img src="meigui.jpg" width="120px" height="120px" alt="表情包"/></span>
+        <span>
+            <ul class="tuwen1">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+        </ul>
+        </span>
+    </div>
+</div>
+</body>
+</html>
