--- a/index.html
+++ b/index.html
@@ -1,77 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<head lang="en">
 <head>
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-<table border="1">
-    <tr>
-        <th>姓名</th>
-        <th>性别</th>
-        <th>年龄</th>
-        <th>臭美</th>
-    </tr>
-    <tr>
-        <td>小A</td>
-        <td>小B</td>
-        <td>小C</td>
-        <td>小D</td>
-    </tr>
-    <tr>
-        <td>小A</td>
-        <td>小B</td>
-        <td>小C</td>
-        <td>小D</td>
-    </tr>
-   </table>
-<br/>
-    <table border="1" style="width:300px">
-        <tr>
-            <th rowspan="4">888</th>
-            <th>姓名</th>
-            <th>性别</th>
-            <th>年龄</th>
-            <th>臭美</th>
-        </tr>
-        <tr>
-            <td>小A</td>
-            <td>小B</td>
-            <td>小C</td>
-            <td>小D</td>
-        </tr>
-        <tr>
-            <td>小A</td>
-            <td>小B</td>
-            <td>小C</td>
-            <td>小D</td>
-        </tr>
-        </table>
-        <br/>
-        <table border="1" style="width:300px">
-            <tr>
-                <th>姓名</th>
-                <th>性别</th>
-                <th>年龄</th>
-                <th>臭美</th>
-            </tr>
-            <tr>
-                <td>小A</td>
-                <td>小B</td>
-                <td>小C</td>
-                <td>小D</td>
-            </tr>
-            <tr>
-                <td>小A</td>
-                <td>小B</td>
-                <td>小C</td>
-                <td>小D</td>
-            </tr>
-            <tr>
-                <td colspan="4">统计：****</td>
-            </tr>
-
-</table>
-<b style="font-size: 100px">&copy;</b>
+<h1 style="font-size:150%">这是标题</h1>
+<center>汪丽</center>
+<h2>个人简历</h2>
+<p>上周，煤价已经超过红色警戒线“600元/吨”，远超今年长协基价535元/吨，下游电厂亏损严重。</p>
+<p>同时，神华和中煤暂停了现货动力煤的销售，以保证长协合同的执行。</p>
+<p>分析师表示，内蒙古和山西等产煤地开工率有限在一定程度上影响了煤炭供应，贸易商以及电企旺季囤煤等行为，都推涨了煤价。</p>
+<p>此外，夏季用煤高峰期过后，此轮拉涨行情需求面支撑力度有限，动力煤行情将结束上行的势头。</p>
+<p>两大煤企暂停电煤销售</p>
+<p>中宇资讯的数据显示，上周国内动力煤市场价格延续上行的态势，且上涨范围由内蒙向周边陕西以及山西等地区扩散，内蒙地区块煤涨幅在20元/吨-30元/吨，神华外采煤/吨上涨至350元/吨。陕西榆林大矿带头普涨，继而带动神木地方矿价格跟调，整体涨幅15元/吨-25元/吨。</p>
+<h2>个人爱好</h2>
+<p>阿迪达斯这三种标志并不是从品牌初创时期就一直存在的，可以说，阿迪达斯标志的不断演变的历史也是阿迪达斯这一世界知名体育用品有限公司不断前进的一种佐证。</p>
+<p>阿迪达斯三条纹标志是最早被启用的，在阿迪达斯品牌成立第二年，也就是1949年就开始应用到阿迪达斯旗下的各类商品中了。其代表了不断前进、不断超越的体育精神。</p>
+<p>到了1972年，阿迪达斯用三叶草标志逐步代替早期的三条纹标志，以极具象征性的更为美观的三叶草来寓意延展到全世界的体育力量，也同时寄予自身品牌走向世界的愿景。</p>
+<p>在运用三叶草标志十来年之后，也就是二十世纪八十年代末九十年代初期，阿迪达斯为了与耐克公司竞争，也为了提升本身的运动时尚感，再次将其品牌最早的三条纹重新改造应用<p>品中，作为阿迪达斯最为大众所熟知（同时也是价格最为大众化的）运动表现系列（adidas performance）。</p>
 </body>
 </html>
