--- a/index.html
+++ b/index.html
@@ -1,23 +1,96 @@
 <!DOCTYPE html>
-<head lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <style>
+        body {
+            margin-left: 20%;
+            margin-right: 20%;
+            background-color: #ffada5;
+            border: 2px solid black;
+            padding: 10px;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        h2 {
+            font-size: 20%;
+            text-align: right;
+        }
+
+        p {
+            text-indent: 2em;
+            line-height: 1.5em;
+            margin: 0.5em;
+        }
+
+        span {
+
+            font-family: simsun;
+            color: pink;
+        }
+
+        div {
+            position: absolute;
+            left: 1250px;
+            top: 10px;
+        }
+
+        .a img {
+            width: 300px;
+            height: 200px;
+        }
+    </style>
 </head>
-<body>
-<h1 style="font-size:150%">这是标题</h1>
-<center>汪丽</center>
-<h2>个人简历</h2>
-<p>上周，煤价已经超过红色警戒线“600元/吨”，远超今年长协基价535元/吨，下游电厂亏损严重。</p>
-<p>同时，神华和中煤暂停了现货动力煤的销售，以保证长协合同的执行。</p>
-<p>分析师表示，内蒙古和山西等产煤地开工率有限在一定程度上影响了煤炭供应，贸易商以及电企旺季囤煤等行为，都推涨了煤价。</p>
-<p>此外，夏季用煤高峰期过后，此轮拉涨行情需求面支撑力度有限，动力煤行情将结束上行的势头。</p>
-<p>两大煤企暂停电煤销售</p>
-<p>中宇资讯的数据显示，上周国内动力煤市场价格延续上行的态势，且上涨范围由内蒙向周边陕西以及山西等地区扩散，内蒙地区块煤涨幅在20元/吨-30元/吨，神华外采煤/吨上涨至350元/吨。陕西榆林大矿带头普涨，继而带动神木地方矿价格跟调，整体涨幅15元/吨-25元/吨。</p>
-<h2>个人爱好</h2>
-<p>阿迪达斯这三种标志并不是从品牌初创时期就一直存在的，可以说，阿迪达斯标志的不断演变的历史也是阿迪达斯这一世界知名体育用品有限公司不断前进的一种佐证。</p>
-<p>阿迪达斯三条纹标志是最早被启用的，在阿迪达斯品牌成立第二年，也就是1949年就开始应用到阿迪达斯旗下的各类商品中了。其代表了不断前进、不断超越的体育精神。</p>
-<p>到了1972年，阿迪达斯用三叶草标志逐步代替早期的三条纹标志，以极具象征性的更为美观的三叶草来寓意延展到全世界的体育力量，也同时寄予自身品牌走向世界的愿景。</p>
-<p>在运用三叶草标志十来年之后，也就是二十世纪八十年代末九十年代初期，阿迪达斯为了与耐克公司竞争，也为了提升本身的运动时尚感，再次将其品牌最早的三条纹重新改造应用<p>品中，作为阿迪达斯最为大众所熟知（同时也是价格最为大众化的）运动表现系列（adidas performance）。</p>
+<h1>给<span>丽丽</span>的一封信</h1>
+
+<h2>学长&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+
+<p>很久以前，有人告诉我一个有关爱情的美丽传说。他说天使来的时候，爱也会悄悄降落。我总是望着星空双手合十默默祈求，但愿那天使不要让我等得太久。</p>
+　　<p>你的温柔体贴，你的坦白率直，你那可爱的笑容，你那迷人的眼睛，你的一举一动都令我着迷。</p>
+
+　　<p>如何让你知道/是你开启/我尘封已久的心/如何让你明了/我心中的爱/早已被你占据/面对你吧/我已没有/逃避的余力/面对你吧/我怎能/永远欺骗自己……</p>
+
+　　<p>人们说：“爱一个人是不求回报的。”但是我却要你给我回报——让我在有生之年把我的爱全部送给你！</p>
+
+　　<p>我希望我们之间的爱，能象小溪中的流水一样，清澈、平静地、欢乐而无忧地流向远方。</p>
+
+　　<p>我只想和你白头到老。爱永远在我们的心中，在我们的眼中。和你共度所有痛苦与快乐的时光！我爱你所有的优点与缺点！</p>
+
+　　<p>相信我，我会让你成为世界上第二幸福的人，因为有了你，我就是最幸福的人！</p>
+
+　　<p>愿你天天都快乐，愿所有的好心情包容着你，愿所有的年轻常刻在你的笑容里。</p>
+
+　　<p>此刻你是否在想着我呢？此时的我十分的挂念着你，如果我有一双翅膀，恨不得马上飞到你身边看望你。</p>
+
+　　<p>你当我是个风筝，要不把我放了，要不然收好带回家，别用一条看不见的情思拴着我，让我心伤。</p>
+
+　　<p>你说人生艳丽/我没有异议/你说人生忧郁/我不言语/只有默默地/承受这一切/承受数不尽的/春来冬去……</p>
+
+　　<p>想你已经养成习惯！爱你已经不能改变！所以我决定和你永远……</p>
+
+　　<p>在我脑子里跑了一天，你累不累？</p>
+
+　　<p>爱过的人都明白/那种孤单的感觉/到今天还在/爱过的人才明白/挥不去也甩不开/是伤悲的情怀……</p>
+
+　　<p>亲爱的，我要做回我自己了，但是我不会遗忘我对你的爱，我正是为了能够好好地爱你，才让自己走出你画的圈子。</p>
+
+　　<p>人说爱情故事/分分合合不必难受/可是你不是我/怎知我痛/人说情到深处/无怨尤不必强求/可是换成你/你真的看破……</p>
+
+　　<p>山盟海誓情犹在/江水滔滔人已渺/珍珠帘卷玉楼空/菱花尘满谁来照/愁肠已断无由醉/长空暗淡连芳草/愁肠已断无由醉/长空暗淡连芳草……</p>
+
+　　<p>雨打在我脸上/洗刷着你的耳语/风卷走了雨伞/卷走残存的痕迹/心依然在街上/反复地走来走去/爱已经被放逐/伸出双手握不住你/想你的夜晚没有你/这一种感觉太熟悉/想你的夜晚没有你/只有/一往情深的自己……</p>
+
+　　<p>总是在无人的角落/自己问自己/为什么我总要压抑/自己的心情/对你的思念在心中/模糊又清晰/为何我总是逃避/远远地见到你/总是装作不在意/谁听见我叹息/望着你的背影/在心中呼唤你/却依旧擦肩而去……</p>
+
+　　<p>找到的、不知道好不好。</p>
+<a href="http://www.baidu.com">
+    <div class="a">
+        <img src="meigui.jpg" alt=""/>
+    </div>
+</a>
 </body>
 </html>
